Realign footer, fix colours

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -189,7 +189,7 @@
 		}
 
 		a:hover {
-			color: #ff7496;
+			color: #d6d6d6;
 		}
 
 	strong, b {
@@ -812,7 +812,7 @@
 				display: block;
 				margin: 0 auto;
 				border-radius: 10px;
-				box-shadow: 0 0 0 2px #eeeeee;
+				box-shadow: 0 0 0 2px #d6d6d6;
 			}
 
 		@media screen and (max-width: 480px) {
@@ -852,18 +852,6 @@
 			font-size: 0.85em;
 			list-style: none;
 		}
-
-			#footer .copyright li {
-				display: inline-block;
-				margin: 0 0 0 0.45em;
-				padding: 0 0 0 0.85em;
-				border-left: solid 1px rgba(255, 255, 255, 0.5);
-				line-height: 1;
-			}
-
-				#footer .copyright li:first-child {
-					border-left: 0;
-				}
 
 /* Wrapper */
 
